Implement outer command